Creación de título

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="prueba.css">
 </head>
 <body>
+  <h1> TITULO DE LA PAGINA </h1>
   <button id="botonAutorizar">ENTRAR</button>
   <script src="prueba.js"> </script>
 </body>
