Añadiendo estilos de página

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Obtener Token de Acceso</title>
+  <title>Spotifus</title>
   <link rel="stylesheet" href="prueba.css">
 </head>
 <body>
-  <h1> TITULO DE LA PAGINA </h1>
+  <h1 class="titulo"> TITULO DE LA PAGINA </h1>
   <button id="botonAutorizar">ENTRAR</button>
   <script src="prueba.js"> </script>
 </body>
