--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="prueba.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spotifus</title>
-  <link rel="stylesheet" href="prueba.css">
+  
 </head>
 <body>
+  <div class="boton"> 
+    
+    <button id="botonAutorizar">ENTRAR</button>
+
+  </div>
   <h1 class="titulo"> TITULO DE LA PAGINA </h1>
-  <button id="botonAutorizar">ENTRAR</button>
+  
   <script src="prueba.js"> </script>
 </body>
 </html>
