--- a/personalizar.html
+++ b/personalizar.html
@@ -8,6 +8,6 @@
 <body>
 
     <h1> PÁGINA PARA ACTUALIZAR EL MONIGOTE DE LA PERSONA   </h1>
-    
+    <script src="personalizar.js"></script>
 </body>
 </html>
