--- a/personalizar.html
+++ b/personalizar.html
@@ -11,5 +11,6 @@
 
     <h1> PÁGINA PARA ACTUALIZAR EL MONIGOTE DE LA PERSONA   </h1>
     <script src="personalizar.js"></script>
+    <script src="server.js"></script>
 </body>
 </html>
