--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </div>
 
-  <h1> ES LA ULTIMA VERSION </h1>
+  <h1 class="cambios"> ES LA ULTIMA VERSION </h1>
 
   
   <script src="prueba.js"> </script>
