cambios en personalizar

--- a/personalizar.html
+++ b/personalizar.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1> PÁGINA PARA ACTUALIZAR EL MONIGOTE DE LA PERSONA   </h1>
+    <h1 class="personalizar"> PÁGINA PARA ACTUALIZAR EL MONIGOTE DE LA PERSONA   </h1>
     <script src="personalizar.js"></script>
     <script src="server.js"></script>
 </body>
