--- a/personalizar.html
+++ b/personalizar.html
@@ -12,5 +12,6 @@
     <h1 class="personalizar"> PÁGINA PARA ACTUALIZAR EL MONIGOTE DE LA PERSONA   </h1>
     <script src="personalizar.js"></script>
     <script src="server.js"></script>
+    <script src="conexion.php"></script>
 </body>
 </html>
